docs: fix search bar style in dark mode

--- a/docs/static/style.scss
+++ b/docs/static/style.scss
@@ -251,6 +251,8 @@ li {
 	padding: 8px;
 	border: 1px solid #ccc;
 	border-radius: 4px;
+	background: inherit;
+	color: inherit;
 }
 
 .hidden {
